# prototype

./: test.py
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/: localizer_rviz_config.rviz  mapping.rviz  rviz_local.rviz
src/ada/: ada.ino
src/ada_pose/: ada_pose.ino
src/arduino/: arduino.ino  commands.h  diff_controller.h  encoder_driver.h  encoder_driver.ino  motor_driver.h  motor_driver.ino
src/arduino/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/depthai/: CMakeLists.txt  package.xml
src/depthai/launch/: spatial_bb.launch.py
src/depthai/scripts/: person_broadcast.py
src/depthai/src/: obj_map.cpp
src/diffdrive/hardware/: diffbot_system.cpp
src/gazebo_sim/launch/: start_gazebo.launch.py
src/gazebo_sim/urdf/: prototype.gazebo.xacro
src/gazebo_sim/worlds/: empty_world.world
src/imu_arduino/: imu_arduino.ino
src/imu_hw/: package.xml
src/imu_interface/: CMakeLists.txt
src/imu_interface/hardware/: imu_interface.cpp
src/imu_node/: CMakeLists.txt
src/imu_node/src/: comms.cpp  imu_node.cpp
src/imu_test/: imu.h  imu_test.ino
src/imutest/: CMakeLists.txt  package.xml
src/imutest/src/: comms.cpp  imu_node.cpp
src/motor_control/: CMakeLists.txt
src/motor_control/config/: controller_config.yaml  my_controllers.yaml
src/motor_control/launch/: launch_arduino.launch.py
src/motor_control/src/: comms.cpp  motor_interface.cpp  wheel.cpp
src/navigator_planner/: CMakeLists.txt
src/navigator_planner/config/: behavior.yaml  bt_navigator.yaml  controller_server.yaml  nav2_params.yaml  nav_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml  output.json  planner_server.yaml  twist_mux.yaml
src/navigator_planner/launch/: navigation.launch.py  planner_server.launch.py  twist_mux.launch.py
src/navigator_planner/scripts/: table_navigation.py
src/pallet_loader/config/: pallet_forward_position_publisher.yaml
src/path_planner/: package.xml  setup.py
src/plane/: CMakeLists.txt
src/prototype/: CMakeLists.txt  package.xml
src/prototype/action/: GoTo.action
src/prototype/config/: camera.yaml  controller_config.yaml  controller_shaft.yaml  controller_velocity.yaml  ekf.yaml  ekf_map.yaml  motor_control.yaml  ost.yaml  twist_mux.yaml  velocity.yaml
src/prototype/launch/: camera_gstreamer.py  camera_launch.py  camera_raw_launch.py  camera_uncompressed_launch.py  control_velocity.launch.py  imu_launch.py  laser.launch.py  laser_pose_launch.py  launch_arduino.launch.py  main.launch.py  main_launch.py  motor_launch.py  navigation.launch.py  navigation_launch.py  online_async.launch.py  prototype_publisher.launch.py  robot_localization_launch.py  robotmodel_launch.py  robotmodel_launch_copy.py  rplidar_launch.py  sensors_launch.py  spawn.launch.xml  spawn_pos.launch.py  twist_mux.launch.py
src/prototype/rviz/: test_encoder.rviz
src/prototype/scripts/: action_client.py  action_server.py  battery.py  goal.py  imu_service.py  laser_pose.py  map.py  map_broadcast.py  object_broadcast.py  odom_base.py  publish_point.py  publisher.py  service_sample.py  string_publisher.py  string_sub.py  test.py  tf.py  tf_broad.py  tree.py  velocity.py
src/prototype/urdf/: Battery_Control.xacro  camera.xacro  crane.xacro  hardware_interface.xacro  joint_macros.xacro  lidar.xacro  link_macros.xacro  pillar.xacro  prototype.xacro  sam_bot_description.xacro  wheel.xacro
src/ros_boot/: CMakeLists.txt  package.xml  services_ros.txt
src/rplidar_ros/: CMakeLists.txt  package.xml
(+2468 files in other folders)
